# train-multi-gpu-poc

./: .env.example  .gitignore  NOTES.md  README.md  download_data.py  download_model.py  pyproject.toml  run_ddp_1node.sbatch  run_ddp_1node.sh  run_fsdp_2nodes.sbatch  train_sft.py  unsloth-salesforce-tool-calling.txt
.continue/: config.json
configs/: accelerate_ddp-1x8gpu.yaml  accelerate_ddp-2x1.yaml  accelerate_ddp.yaml  accelerate_fsdp-1x8gpu.yaml  accelerate_fsdp-2x8gpu.yaml  accelerate_fsdp.yaml
flash-attn/: 2_flash_attention-cp310.build.sh  2_flash_attention-cu126-cp312-hopper.build.sh  2_flash_attention-cu126-cp312.build.sh  2_flash_attention-cu129-cp312.build.sh  Dockerfile.flash-attention-cu124-cp310.amd64  Dockerfile.flash-attention-cu126-cp312-hopper.amd64  Dockerfile.flash-attention-cu126-cp312.amd64  Dockerfile.flash-attention-cu129-cp312.amd64  notes.txt
old/: main.py  test_ddp.py  test_pp.py
terraform/: generic_worker_nodes.tf
terraform/nebius-modules/nfs-server/: disks.tf
terraform/nextgen/: .envrc  .terraform.lock.hcl  dev.tfvars.autogen  kube.sh  mlflow-msp.sh  mlflow-s3.values.yaml  pg-msp.sh  spark-pi.yaml  terraform.tfvars  terraform_backend_override.tf  variables.tf  vars.md
terraform/nextgen/.terraform/: terraform.tfstate
terraform/soperator-modules/airflow/: values.yaml
terraform/soperator-modules/mlflow/: values.yaml
terraform/soperator-modules/o11y/: main.tf
